Fix transform masks not to become distorted after scaling of the image

Now all transformations applied to the image will also be applied to
transform masks as well.

BUG:409221