plugins/tools/tool_transform2/tool_transform_args.h
@@ -310,6 +310,7 @@ public:
     static ToolTransformArgs fromXML(const QDomElement &e);
 
     void translate(const QPointF &offset);
+    void transformSrcAndDst(const QTransform &t);
 
     void saveContinuedState();
     void restoreContinuedState();
@@ -327,7 +328,7 @@ public:
     bool meshScaleHandles() const;
     void setMeshScaleHandles(bool meshScaleHandles);
 
-    void scaleSrcAndDst(qreal scale);
+    void scale3dSrcAndDst(qreal scale);
 
 private:
     void clear();
